# WxMusic

./: build.gradle  settings.gradle  更新准则
amr/: build.gradle
amr/src/main/: AndroidManifest.xml
amr/src/main/jni/oscl/: oscl_mutex.h
app/: CMakeLists.txt  build.gradle  proguard-rules.pro  qianming2.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.json  r4000.data  xposed_init
app/src/main/cpp/: native-lib.cpp
app/src/main/res/drawable/: list_loading.xml  promise_sell_btn_back.xml
app/src/main/res/layout/: activity_detail.xml  activity_main.xml  content_main.xml  content_music1.xml  detail_list_item.xml  fragment_audio_recorder.xml  fragment_common.xml  item_music1.xml  (+8 more)
dialog_library/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
jar/: build.gradle  proguard-rules.pro
jar/src/main/: AndroidManifest.xml
jni/: CMakeLists.txt  build.gradle
jni/src/androidTest/java/com/wx/voice/: ExampleInstrumentedTest.java
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: native-lib.cpp  voice-core.cpp
jni/src/main/java/com/nine/remotemm/util/: VC.java
jni/src/main/java/com/wx/voice/: MainActivity.java
jni/src/main/java/com/wx/voice/core/: MMCore.java
jni/src/main/java/com/wx/voice/util/: Dd.java
jni/src/main/res/layout/: activity_main.xml  content_main.xml
jni/src/main/res/menu/: menu_main.xml
jni/src/main/res/values/: strings.xml
jni/src/test/java/com/wx/voice/: ExampleUnitTest.java
mm/: build.gradle  proguard-rules.pro
mm/gradle/wrapper/: gradle-wrapper.properties
mm/src/main/: AndroidManifest.xml
(+407 files in other folders)
